// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Table HeadCell should be able to "center" align 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: center;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="center"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Column 1
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should be able to "left" align 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Column 1
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should be able to "right" align 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-end;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="right"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Column 1
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should call onSortChange with asc order when clicked on sorting icon 1`] = `
.c6 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c6 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: #3872D2;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c1:hover .c5 * {
  fill: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #3872D2;
}

.c0 .c5 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c0 .c5 * {
  fill: #3872D2;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.208 9.03a1 1 0 0 1 1.584 0l3.165 4.11a1 1 0 0 1-.793 1.61H8.836a1 1 0 0 1-.793-1.61l3.165-4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should call onSortChange with desc order when clicked on sorting icon 1`] = `
.c6 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c6 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: #3872D2;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c1:hover .c5 * {
  fill: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #3872D2;
}

.c0 .c5 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c0 .c5 * {
  fill: #3872D2;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should render properly with dark background and dropdown icon by default 1`] = `
.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: default;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #435465;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Demo
            </h5>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should render properly with hover state 1`] = `
.c6 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c6 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c1:hover .c5 * {
  fill: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #607890;
}

.c0 .c5 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c0 .c5 * {
  fill: #607890;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;

exports[`Card Table HeadCell should render properly with light background and dropdown icon by default 1`] = `
.c6 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c6 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 700;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
  text-align: initial;
  text-transform: uppercase;
}

.c2 {
  padding: 1rem 1.6rem;
  display: flex;
  align-items: center;
}

.c0 {
  padding: 0 0.8rem;
  margin: 1.4rem 0;
  display: flex;
  align-items: center;
  position: relative;
  justify-content: flex-start;
}

.c0::after {
  content: '';
  width: calc(100% - 1.6rem);
  margin: 0 0.8rem;
  display: block;
  position: absolute;
  bottom: -1.6rem;
  left: 0;
  background-color: transparent;
  height: 0.2rem;
  transition: all 100ms ease-out;
  border-radius: 0.2rem 0.2rem 0 0;
}

.c0 .c1:hover {
  cursor: pointer;
}

.c0 .c1:hover .c3 {
  color: #5687D9;
}

.c0 .c1:hover .c5 * {
  fill: #5687D9;
}

.c0 .c3 {
  transition: all 100ms ease-out;
  user-select: none;
  display: inline;
  color: #607890;
}

.c0 .c5 {
  transition: all 100ms ease-out;
  width: 2.4rem;
  cursor: pointer;
  padding-left: 0.4rem;
}

.c0 .c5 * {
  fill: #607890;
}

<div>
  <table>
    <thead>
      <tr>
        <th
          align="left"
          class="c0"
        >
          <span
            class="c1 c2"
          >
            <h5
              class="c3 c4"
              textalign="initial"
              textcolor="inherit"
              textvariant="h5"
            >
              Demo
            </h5>
            <svg
              class="c5 c6"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.229 6.935a1 1 0 0 1 1.543 0l2.208 2.679a1 1 0 0 1-.77 1.636H9.79a1 1 0 0 1-.77-1.636l2.209-2.679zM12.771 17.065a1 1 0 0 1-1.543 0L9.02 14.386a1 1 0 0 1 .772-1.636h4.418a1 1 0 0 1 .771 1.636l-2.209 2.679z"
                fill="#435465"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
  </table>
</div>
`;
